--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico in the root directory -->
+    <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <link rel="stylesheet" href="css/vendor/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+
+<!-- Add your site or application content here -->
+<section class="header">
+     <div class="container">
+         <div class="menu-bar">
+             <img src="img/logo.png"/>
+             <ul class="nav navbar-nav menu">
+                 <li><a class="active" href="#">HOME</a></li>
+                 <li><a href="#">STYLE DEMO</a></li>
+                 <li><a href="#">FULL WIDTH</a></li>
+                 <li><a href="#">DROP DOWN</a></li>
+                 <li><a href="#">PORTFOLIO</a></li>
+             </ul>
+         </div>
+
+     </div>
+
+</section>
+
+<script src="js/vendor/jquery-2.2.4.min.js"></script>
+<script src="js/main.js"></script>
 
 
-        <script src="js/vendor/jquery-2.2.4.min.js"></script>
-        <script src="js/main.js"></script>
-
-
-    </body>
+</body>
 </html>
