--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/vendor/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -21,21 +23,86 @@
 
 <!-- Add your site or application content here -->
 <section class="header">
-     <div class="container">
-         <div class="menu-bar">
-             <img src="img/logo.png"/>
-             <ul class="nav navbar-nav menu">
-                 <li><a class="active" href="#">HOME</a></li>
-                 <li><a href="#">STYLE DEMO</a></li>
-                 <li><a href="#">FULL WIDTH</a></li>
-                 <li><a href="#">DROP DOWN</a></li>
-                 <li><a href="#">PORTFOLIO</a></li>
-             </ul>
-         </div>
-     </div>
+    <div class="container">
+        <div class="menu-bar">
+            <img src="img/logo.png"/>
+            <ul class="nav navbar-nav menu">
+                <li><a class="active" href="#">HOME</a></li>
+                <li><a href="#">STYLE DEMO</a></li>
+                <li><a href="#">FULL WIDTH</a></li>
+                <li><a href="#">DROP DOWN</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+            </ul>
+        </div>
+        <div class="slidebar">
+            <div class="block-text col-sm-6">
+                <div class="carousel-text slider-for">
+                    <div class="contain-text">
+                        <h2 class="title title-courousel">
+                            Cursus penati<br>
+                            saccum nulla.
+                        </h2>
+
+                        <p class="para-courousel">
+                            Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                            Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et
+                            feugiat adipiscinia pellentum leo.
+                        </p>
+                        <button class="btn-courousel" type="button">Read more here >></button>
+                    </div>
+                    <div>
+                        <h2 class="title title-courousel">
+                            Cursus penati<br>
+                            ffg gfgg.
+                        </h2>
+
+                        <p class="para-courousel">
+                            le hhe jf lf ldfs lfds fmds fmdsslf mfsđ
+                        </p>
+                        <button class="btn-courousel" type="button">Read more here >></button>
+                    </div>
+                    <div>
+                        <h2 class="title title-courousel">
+                            Cursus penati<br>
+                            sacfsgfhhhhhhhh
+                        </h2>
+
+                        <p class="para-courousel">
+                            gfffffffffff
+                            gfd
+                            fggggg
+                            gfd
+
+                        </p>
+                        <button class="btn-courousel" type="button">Read more here >></button>
+                    </div>
+                </div>
+            </div>
+            <div class="block-media col-sm-6">
+                <div class="circle">
+                    <div class="slider-nav ">
+                        <div class="img">
+                            abc
+                        </div>
+                        <div class="img">
+                            xyx
+                        </div>
+                        <div class="img">
+                            aaa
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /.block-media -->
+
+
+        </div>
+
+    </div><!-- /.block-text -->
 </section>
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="js/vendor/slick.min.js"></script>
+<script src="js/vendor/bootstrap.js"></script>
 <script src="js/main.js"></script>
 
 
