--- a/index.html
+++ b/index.html
@@ -50,29 +50,29 @@
                         </p>
                         <button class="btn-courousel" type="button">Read more here >></button>
                     </div>
-                    <div>
+                    <div class="contain-text">
                         <h2 class="title title-courousel">
                             Cursus penati<br>
-                            ffg gfgg.
+                            shfgfd nulla.
                         </h2>
 
                         <p class="para-courousel">
-                            le hhe jf lf ldfs lfds fmds fmdsslf mfsđ
+                            Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                            Urnaultrices ghhj congue magnis vestibulum quismodo nulla et
+                            feugiat adipiscinia pellentum leo.
                         </p>
                         <button class="btn-courousel" type="button">Read more here >></button>
                     </div>
-                    <div>
+                    <div class="contain-text">
                         <h2 class="title title-courousel">
                             Cursus penati<br>
-                            sacfsgfhhhhhhhh
+                            gf ffd.
                         </h2>
 
                         <p class="para-courousel">
-                            gfffffffffff
-                            gfd
-                            fggggg
-                            gfd
-
+                            Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                            Urnaultrices quishgjhgj gfh lentesque congue magnis vestibulum quismodo nulla et
+                            feugiat adipiscinia pellentum leo.
                         </p>
                         <button class="btn-courousel" type="button">Read more here >></button>
                     </div>
