--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="circle">
                     <div class="slider-nav ">
                         <div class="img">
-                            abc
+                            <img src="img/thumb.jpg" alt="" />
                         </div>
                         <div class="img">
                             xyx
