--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="slidebar">
             <div class="block-text col-sm-6">
-                <div class="carousel-text slider-for">
+                <div class="carousel-text slider-nav">
                     <div class="contain-text">
                         <h2 class="title title-courousel">
                             Cursus penati<br>
@@ -80,15 +80,15 @@
             </div>
             <div class="block-media col-sm-6">
                 <div class="circle">
-                    <div class="slider-nav ">
+                    <div class="slider-for ">
                         <div class="img">
-                            <img src="img/thumb.jpg" alt="" />
+                            <img src="img/thumb1.png" alt="1"/>
                         </div>
                         <div class="img">
-                            xyx
+                            <img src="img/thumb2.png" alt="2"/>
                         </div>
                         <div class="img">
-                            aaa
+                            <img src="img/thumb3.png" alt="3"/>
                         </div>
                     </div>
                 </div>
