--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             Urnaultrices ghhj congue magnis vestibulum quismodo nulla et
                             feugiat adipiscinia pellentum leo.
                         </p>
+                        <!--TODO tim va search ung dung cua html code &raquo; -->
                         <button class="btn-courousel" type="button">Read more here >></button>
                     </div>
                     <div class="contain-text">
