--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                 <li><a href="#">PORTFOLIO</a></li>
             </ul>
         </div>
-        <div class="slidebar">
+        <div class="slidebar slider">
             <div class="block-text col-sm-6">
                 <div class="carousel-text slider-nav">
+
                     <div class="contain-text">
                         <h2 class="title title-courousel">
                             Cursus penati<br>
@@ -62,7 +63,7 @@
                             feugiat adipiscinia pellentum leo.
                         </p>
                         <!--TODO tim va search ung dung cua html code &raquo; -->
-                        <button class="btn-courousel" type="button">Read more here >></button>
+                        <button class="btn-courousel" type="button">Read more here &raquo;</button>
                     </div>
                     <div class="contain-text">
                         <h2 class="title title-courousel">
@@ -78,6 +79,7 @@
                         <button class="btn-courousel" type="button">Read more here >></button>
                     </div>
                 </div>
+
             </div>
             <div class="block-media col-sm-6">
                 <div class="circle">
