--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et
                             feugiat adipiscinia pellentum leo.
                         </p>
-                        <button class="btn-courousel" type="button">Read more here >></button>
+                        <button class="btn-courousel" type="button">Read more here &raquo;</button>
                     </div>
                     <div class="contain-text">
                         <h2 class="title title-courousel">
@@ -62,7 +62,6 @@
                             Urnaultrices ghhj congue magnis vestibulum quismodo nulla et
                             feugiat adipiscinia pellentum leo.
                         </p>
-                        <!--TODO tim va search ung dung cua html code &raquo; -->
                         <button class="btn-courousel" type="button">Read more here &raquo;</button>
                     </div>
                     <div class="contain-text">
@@ -76,7 +75,7 @@
                             Urnaultrices quishgjhgj gfh lentesque congue magnis vestibulum quismodo nulla et
                             feugiat adipiscinia pellentum leo.
                         </p>
-                        <button class="btn-courousel" type="button">Read more here >></button>
+                        <button class="btn-courousel" type="button">Read more here &raquo;</button>
                     </div>
                 </div>
 
