--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
                 <li><a href="#">PORTFOLIO</a></li>
             </ul>
         </div>
-        <div class="slidebar slider">
+        <div class="slidebar slider clearfix">
             <div class="block-text col-sm-6">
                 <div class="carousel-text slider-nav">
-
                     <div class="contain-text">
                         <h2 class="title title-courousel">
                             Cursus penati<br>
