--- a/index.html
+++ b/index.html
@@ -100,6 +100,144 @@
 
     </div><!-- /.block-text -->
 </section>
+<section class="body">
+    <div class="container">
+        <div class="clearfix">
+            <div class="service-title">
+                <div class="service-wrap">
+                    <img class="square-shape" src="img/service-img.png">
+                    <h2 class="title">
+                        SERVICE TITLE
+                    </h2>
+                    <p class="para-text">
+                        Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue
+                    </p>
+                </div>
+            </div>
+            <div class="service-title ">
+                <div class="service-wrap custom-service">
+
+                    <img class="square-shape" src="img/service-img.png">
+
+                    <h2 class="title">
+                        SERVICE TITLE
+                    </h2>
+                    <p class="para-text">
+                        Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue
+                    </p>
+                </div>
+            </div>
+            <div class="service-title">
+                <div class="service-wrap">
+
+                    <img class="square-shape" src="img/service-img.png">
+
+                    <h2 class="title">
+                        SERVICE TITLE
+                    </h2>
+                    <p class="para-text">
+                        Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue
+                    </p>
+                </div>
+            </div>
+            <div class="service-title">
+                <div class="service-wrap">
+
+                    <img class="square-shape" src="img/service-img.png">
+
+                    <h2 class="title">
+                        SERVICE TITLE
+                    </h2>
+                    <p class="para-text">
+                        Vestassapede et donec ut est libe ros sus et eget sed eget quisq ueta habitur augue
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <div class="lastest-work">
+            <div class="lastest-work-title">
+                <div class="lastest-work-wrap">
+                    <h2>
+                        LATEST WORK
+                    </h2>
+                </div>
+                <div class="border">
+                </div>
+
+            </div>
+
+
+            <div class="clearfix">
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-last-work">
+                    <div class="img-wrap">
+                        <img src="img/img-last-work.png">
+                        <div class="text-bottom">
+                            <p>
+                                LOREM IPSUM DOLOR
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </div>
+</section>
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
