--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
 
     </div>
 </section>
+<section class="footer">
+    <div class="container">
+        <div class="clearfix">
+
+        </div>
+    </div>
+</section>
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
