--- a/index.html
+++ b/index.html
@@ -158,16 +158,13 @@
         <div class="lastest-work">
             <div class="lastest-work-title">
                 <div class="lastest-work-wrap">
-                    <h2>
+                    <h1 class="lastest-work-wrap">
                         LATEST WORK
-                    </h2>
+                    </h1>
                 </div>
                 <div class="border">
                 </div>
-
             </div>
-
-
             <div class="clearfix">
                 <div class="img-last-work">
                     <div class="img-wrap">
@@ -239,9 +236,118 @@
     </div>
 </section>
 <section class="footer">
-    <div class="container">
-        <div class="clearfix">
-
+    <div class="border">
+        <div class="container">
+            <div class="clearfix">
+                <div class="col1 col">
+                    <h3>
+                        From The Blog
+                    </h3>
+                    <h4 class="color-light-green">
+                        Post Title
+                    </h4>
+                    <span class="admin color-light-green">
+                         Adminclass
+                    </span>
+                    <span class="domain">
+                    ,domainname.com
+                    </span>
+                    <p class="date">
+                        Friday, 6th April 2000
+                    </p>
+                    <p class="text">
+                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt.
+                        Namjusto cras urna urnaretra lor urna neque sed quis orci nulla.
+                    </p>
+                    <a class="read-more color-light-green">
+                        Read More &raquo;
+                    </a>
+                </div>
+                <div class="col2 col">
+                    <h3>
+                        Quick Links
+                    </h3>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                            Lorem ipsum dolor sit
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                            Amet consectetur
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                            Praesent vel sem id
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                           Curabitur hendrerit est
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                           Aliquam eget erat nec sapien
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                          Cras id augue nunc
+                        </a>
+                    </div>
+                    <div class="text-row">
+                        <a class="color-light-green"><img src="img/bullet.png"/>
+                          Sed a nulla urna
+                        </a>
+                    </div>
+                </div>
+                <div class="col3 col">
+                    <h3>
+                        Latest Tweets
+                    </h3>
+                    <p class="padding-bottom">
+                        <span class="color-light-green">
+                            @namehere
+                        </span>
+                        <span>
+                            Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.
+                            Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago
+                        </span>
+                    </p>
+                    <p>
+                        <span class="color-light-green">
+                            @namehere
+                        </span>
+                        <span>
+                            Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.
+                            Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago
+                        </span>
+                    </p>
+                </div>
+                <div class="col4 col">
+                    <h3>
+                        Contact Us
+                    </h3>
+                    <input type="text" name="name" placeholder="Full Name" /><br>
+                    <input type="text" name="email" placeholder="Email Address"/><br>
+                    <input type="text" name="subject" placeholder="Subject"/><br>
+                    <textarea placeholder="Message"></textarea>
+                    <input class="submit" type="submit" name="Submit" value="SUBMIT"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <div class="container">
+                <span class="contain">
+                    Copyright © 2013 Domain Name - All Rights Reserved
+                </span>
+                <span class="template">
+                    Template by OS Templates
+                </span>
         </div>
     </div>
 </section>
