--- a/index.html
+++ b/index.html
@@ -308,32 +308,28 @@
                     <h3>
                         Latest Tweets
                     </h3>
-                    <p class="padding-bottom">
+                    <p>
                         <span class="color-light-green">
                             @namehere
                         </span>
-                        <span>
                             Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.
                             Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago
-                        </span>
                     </p>
                     <p>
                         <span class="color-light-green">
                             @namehere
                         </span>
-                        <span>
                             Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.
                             Nequatdui laorem justo a non tellus laoremut vitae doloreet 1 day ago
-                        </span>
                     </p>
                 </div>
                 <div class="col4 col">
                     <h3>
                         Contact Us
                     </h3>
-                    <input type="text" name="name" placeholder="Full Name" /><br>
-                    <input type="text" name="email" placeholder="Email Address"/><br>
-                    <input type="text" name="subject" placeholder="Subject"/><br>
+                    <input type="text" name="name" placeholder="Full Name" />
+                    <input type="text" name="email" placeholder="Email Address"/>
+                    <input type="text" name="subject" placeholder="Subject"/>
                     <textarea placeholder="Message"></textarea>
                     <input class="submit" type="submit" name="Submit" value="SUBMIT"/>
                 </div>
