--- a/axit/index.html
+++ b/axit/index.html
@@ -22,7 +22,421 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<h1>aaaa</h1>
+<section class="header">
+    <div class="top-header">
+        <div class="container">
+            <img src="img/axit-logo.png"/>
+            <ul class="nav navbar-nav menu">
+                <li><a class="active" href="#">Futures</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Review</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="slider">
+        <div class="container">
+            <div class="clearfix">
+                <div class="slider-left col-sm-6">
+                    <img src="img/logo-slider.png"/>
+                    <h1>
+                        MODERN AXURE TEMPLATE
+                        FOR BEAUTIFUL PROTOTYPES
+                    </h1>
+                    <div class="border">
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                        accumsan et viverra justo commodo.
+                    </p>
+                    <button>Download</button>
+                </div>
+                <div class="slider-right col-sm-6">
+                    <div class="slider-right-top">
+                        Try Your <span>FREE</span> Trial Today
+                    </div>
+                    <div class="slide-right-body">
+                        <input class="input" type="text" placeholder="Name"/>
+                        <input class="input" type="text" placeholder="Email"/>
+                        <input class="input" type="password" placeholder="Password"/>
+                    </div>
+                    <div class="slider-right-bottom">
+                        Get Started
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-header">
+        <div class="container">
+            <div class="clearfix">
+                <div class="social-media col-sm-5">
+                    <h3>
+                        Social Media
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean euismod bibendum laoreet.
+                    </p>
+                </div>
+                <img class="img-social col-sm-7" src="img/media-icon.png"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="tab">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-2 number-tab">
+                <div class="sub-number-tab sub1">
+                    <div class="tab-number">
+                        TAB1
+                    </div>
+                </div>
+                <div class="sub-number-tab sub2">
+                    <div class="tab-number">
+                        TAB2
+                    </div>
+                </div>
+                <div class="sub-number-tab sub3">
+                    <div class="tab-number">
+                        TAB3
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 sub-tab-content ">
+                <h3>
+                    Tabs with soft transitioning effect.
+                </h3>
+                <p class="paragraph1">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                    penatibus et magnis dis parturient montes.
+                </p>
+                <p class="paragraph2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                    bibendum laoreet.
+                </p>
+                <button>Download</button>
+            </div>
+            <img class="col-sm-4 tab-building-img" src="img/tab-building-img.png"/>
+        </div>
+    </div>
+</section>
+<section class="sub-list">
+    <div class="container">
+        <div class="clearfix">
+            <img class=" col-sm-6 sub-list-img" src="img/sub-list-img.png"/>
+            <div class="col-sm-6 sub-list-content">
+                <h3>
+                    Sub list section
+                </h3>
+                <div class="border">
+
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                    euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                    accumsan et viverra justo commodo.
+                </p>
+                <div class="sub-list-title">
+                    <img class="sub-list-icon" src="img/sub-list-icon.png">
+                    <div class="wrap-title">
+                        <h4>
+                            Title
+                        </h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Aenean euismod bibendum laoreet.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-list-title">
+                    <div class="sub-list-icon">
+                        <img src="img/sub-list-icon.png">
+                    </div>
+                    <div class="wrap-title">
+                        <h4>
+                            Title
+                        </h4>
+                        <p class="paragraph-edit">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Aenean euismod bibendum laoreet.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<section class="standard-picture">
+    <div class="container">
+        <div class="clearfix">
+            <div class="col-sm-6 standard-picture-content">
+                <h2>
+                    Standard Picture Section
+                </h2>
+                <div class="border">
+                </div>
+                <p class="paragraph-top">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                    euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                    et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                    natoque penatibus et magnis dis parturient montes.
+                </p>
+                <p class="paragraph-bottom">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                    bibendum laoreet.
+                </p>
+            </div>
+            <img class="col-sm-6 img" src="img/standard-picture.png"/>
+        </div>
+    </div>
+</section>
+
+<section class="awesome">
+    <div class="container">
+        <div class="awesome-title">
+            <h2>
+                WHY THIS IS AWESOME
+            </h2>
+            <div class="border">
+
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="clearfix">
+            <div class="col-sm-4 awesome-col">
+                <img src="img/awesome-throughful-design.png"/>
+                <h3>
+                    Throughful design
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.
+                </p>
+            </div>
+            <div class="col-sm-4 awesome-col">
+                <img src="img/awesome-well-crafted.png"/>
+                <h3>
+                    Well Crafted
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.
+                </p>
+            </div>
+            <div class="col-sm-4 awesome-col">
+                <img src="img/awesome-eassy.png"/>
+                <h3>
+                    Easy To Customize
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="pricing-option">
+    <div class="container">
+        <div class="pricing-option-title">
+            <h2>
+                PRICING OPTIONS
+            </h2>
+            <div class="border">
+
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="clearfix">
+            <div class="col-sm-4 basic col">
+                <div class="basic-wrap">
+                    <div class="top-basic">
+                        Basic
+                    </div>
+                    <img src="img/pricing-option-0.png"/>
+                    <div class="bottom-basic">
+                        <strong>Free for life</strong>
+                    </div>
+                    <div class="row1 basic-row">
+                            1 GB OF SPACE
+                    </div>
+                    <div class="row2 basic-row">
+                        <span>
+                            10 GB OG BANDWITCH
+                        </span>
+                    </div>
+                    <div class="row3 basic-row">
+                        <span>
+                            3 WEBSITES
+                        </span>
+                    </div>
+                    <div class="row4 basic-row">
+                        <span>
+                            BASIC CUSTOMIZATION
+                        </span>
+                    </div>
+                    <div class="row5 basic-row">
+                        <span>
+                            WORDPRESS INTERGRATION
+                        </span>
+                    </div>
+                    <div class="row6 basic-row">
+                        <span>
+                            EMAIL SUPPORT
+                        </span>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-sm-4 professional col">
+                <div class="professional-wrap">
+                    <div class="top-professional">
+                        Professional
+                    </div>
+                    <img src="img/pricing-option-19.png"/>
+                    <div class="bottom-professional">
+                        Monthly Payment
+                    </div>
+                    <div class="row1 basic-row">
+                        1 GB OF SPACE
+                    </div>
+                    <div class="row2 basic-row">
+                        <span>
+                            10 GB OG BANDWITCH
+                        </span>
+                    </div>
+                    <div class="row3 basic-row">
+                        <span>
+                            3 WEBSITES
+                        </span>
+                    </div>
+                    <div class="row4 basic-row">
+                        <span>
+                            BASIC CUSTOMIZATION
+                        </span>
+                    </div>
+                    <div class="row5 basic-row">
+                        <span>
+                            WORDPRESS INTERGRATION
+                        </span>
+                    </div>
+                    <div class="row6 basic-row">
+                        <span>
+                            EMAIL SUPPORT
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 enterprise col">
+                <div class="enterprise-wrap">
+                    <div class="top-enterprise">
+                        Enterprise
+                    </div>
+                    <img src="img/pricing-option-70.png">
+                    <div class="balance-hover">
+                    </div>
+                    <div class="row1 basic-row">
+                        1 GB OF SPACE
+                    </div>
+                    <div class="row2 basic-row">
+                        <span>
+                            10 GB OG BANDWITCH
+                        </span>
+                    </div>
+                    <div class="row3 basic-row">
+                        <span>
+                            3 WEBSITES
+                        </span>
+                    </div>
+                    <div class="row4 basic-row">
+                        <span>
+                            BASIC CUSTOMIZATION
+                        </span>
+                    </div>
+                    <div class="row5 basic-row">
+                        <span>
+                            WORDPRESS INTERGRATION
+                        </span>
+                    </div>
+                    <div class="row6 basic-row">
+                        <span>
+                            EMAIL SUPPORT
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="customer">
+
+</section>
+<section class="stylish-axure">
+    <div class="stylish-axure-content">
+        <h2>
+            STYLISH AXURE DESIGN
+        </h2>
+        <div class="border">
+        </div>
+        <p>
+            Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+        </p>
+        <button>Download</button>
+    </div>
+</section>
+<section class="contact">
+    <div class="container">
+        <div class="contact-title">
+            <h2>
+                CONTACT US
+            </h2>
+            <div class="border">
+
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="clearfix">
+            <div class="col-sm-6 info">
+                <input class="input" name="name" type="text" placeholder="Name"/>
+                <input class="input"  name="email" type="text" placeholder="Email"/>
+                <input class="input"  name="subject" type="text" placeholder="Subject"/>
+            </div>
+            <div class="col-sm-6 message">
+                <textarea placeholder="Message"></textarea>
+            </div>
+        </div>
+        <button>Send message</button>
+
+    </div>
+</section>
+<section class="footer">
+    <div class="footer-wrap">
+        <img src="img/footer-img.png"/>
+        <p>
+            2015 Axures Theme
+        </p>
+    </div>
+
+</section>
+
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
