reponsive axit page

--- a/axit/index.html
+++ b/axit/index.html
@@ -194,7 +194,7 @@
                     bibendum laoreet.
                 </p>
             </div>
-            <img class="col-sm-6 img" src="img/standard-picture.png"/>
+            <img class="col-sm-6 standard-img" src="img/standard-picture.png"/>
         </div>
     </div>
 </section>
@@ -263,7 +263,7 @@
             </p>
         </div>
         <div class="clearfix">
-            <div class="col-sm-4 basic col">
+            <div class="col-sm-4 col-xs-4 col-lg-4 basic col">
                 <div class="basic-wrap">
                     <div class="top-basic">
                         Basic
@@ -304,7 +304,7 @@
 
                 </div>
             </div>
-            <div class="col-sm-4 professional col">
+            <div class="col-sm-4 col-xs-4 col-lg-4 professional col">
                 <div class="professional-wrap">
                     <div class="top-professional">
                         Professional
@@ -343,7 +343,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 enterprise col">
+            <div class="col-sm-4 col-xs-4 col-lg-4 enterprise col">
                 <div class="enterprise-wrap">
                     <div class="top-enterprise">
                         Enterprise
