TODO List by Nhat
Recommend fix list by Nhật :)

--- a/axit/index.html
+++ b/axit/index.html
@@ -445,4 +445,68 @@
 
 
 </body>
+<script>
+    /*
+    * TODO List
+    * 1/Section - Header
+    *   -  Canh giữa phần nội dung chính của Header
+    *  Hint: https://css-tricks.com/centering-css-complete-guide/
+    *   -  Chuyển Get Started thành nút
+    *  Hint: có thể dùng class bootstrap btn-flat, btn-block, hoặc style bằng CSS
+    *   -  Navbar nên có trạng thái Hover đổi màu
+    *   -  Button Download nên có trạng thái hover (nền trắng chữ đen)
+    *   -  Phần Ops-in nên canh giữa các icon mạng xã hộitab, thêm
+    *  Hint: https://css-tricks.com/centering-css-complete-guide/
+    *
+    *  2/Section - Tab
+    *   - Cần style lại buttonCSS, bỏ border, thêm
+    *   Hint: có thể dùng class bootstrap cho button (btn), hoặc style bằng shadow
+    *   - Các Tab có thể thêm animationoptional chuyển màu, nên đặt thêm thuộc tính
+    *   pointer:cursor vào từng div.tab
+    *
+    *   3/ Section - Sublist
+    *   - Text bị hình đẩy ko đều
+    *   Hint: Dùng overflow: hidden cho element cha, hoặc clear:left;
+    *   - Canh khoảng cách chưa giống thiết kế
+    *
+    *   4/ Section - Standard picture
+    *    - Font size tủa title chưa đồng bộ với các mục khác
+    *
+    *   5/
+    *    - Padding trên dưới và font- chưa đúngweight
+    *    - Font chữa thẻ p chưa đồng bộ với các section khác
+    *
+    *   6/ Section Pricing
+    *   - Thẻ ở giữa còn thiếu thông tin
+    *   - Margin chưa đúng so với thiết kế
+    *
+    *   7/ Thiếu phần testimonial
+    *
+    *   8/ Phần stylish-axure
+    *    -  Button thêm Hover effect (giống với hea   *
+    *   9/ Section - Contact Ustrên
+    *    - Title còn thiếu gạch chân
+    *    - Bỏ reize của Text Area
+    *    - Style lại button như
+    *
+    * Conclusion
+    *  -  kiểm tra lại tất cả các phần về padding, margin, font-size,
+    *  đồng bộ giữa các thẻ title và paragraph.
+    *  - Thêm hiệu ứng Hover cho các Call to action (link, button, icon mạng xã )hội
+    *  - Kiểm tra border radius hộp thoại đăng nhập
+    *  - Tìm giải pháp nén các file hình để giảm dung lượng
+    *  Hint: Sử dụng tool nén ảnh trực tuyến :
+    *  Save image for web tren PSD: CTRL(C)+ALT+SHIFT+S;
+    *  https://tinypng.com/
+    *  http://optimizilla.com/vi/
+    *
+    *  Recommend nghiên cứu về CSS Animation
+    *  Tài liệu Animation:
+    *  http://file.allitebooks.com/20160513/Transitions%20and%20Animations%20in%20CSS.pdf
+    *
+    *  Tested by Nihato
+    *
+    * */
+</script>
 </html>
+
