--- a/axit/index.html
+++ b/axit/index.html
@@ -35,38 +35,44 @@
             </ul>
         </div>
     </div>
-    <div class="slider">
+    <div class="slider ">
         <div class="container">
-            <div class="clearfix">
-                <div class="slider-left col-sm-6">
-                    <img src="img/logo-slider.png"/>
-                    <h1>
-                        MODERN AXURE TEMPLATE
-                        FOR BEAUTIFUL PROTOTYPES
-                    </h1>
-                    <div class="border">
+                <div class="wrap-content-header clearfix">
+                    <div class="slider-left col-sm-6">
+                        <div class="wrap-slider-left">
+                            <img src="img/logo-slider.png"/>
+                            <h2>
+                                MODERN AXURE TEMPLATE
+                                FOR BEAUTIFUL PROTOTYPES
+                            </h2>
+                            <div class="border">
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                                accumsan et viverra justo commodo.
+                            </p>
+                            <button class="btn">Download</button>
+                        </div>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-                        accumsan et viverra justo commodo.
-                    </p>
-                    <button>Download</button>
+                    <div class="slider-right col-sm-6">
+                        <div class="wrap-silder-right">
+                            <div class="slider-right-top">
+                                Try Your <span>FREE</span> Trial Today
+                            </div>
+                            <div class="slide-right-body">
+                                <input class="input" type="text" placeholder="Name"/>
+                                <input class="input" type="text" placeholder="Email"/>
+                                <input class="input" type="password" placeholder="Password"/>
+                            </div>
+                            <button class="slider-right-bottom btn">
+                                Get Started
+                            </button>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="slider-right col-sm-6">
-                    <div class="slider-right-top">
-                        Try Your <span>FREE</span> Trial Today
-                    </div>
-                    <div class="slide-right-body">
-                        <input class="input" type="text" placeholder="Name"/>
-                        <input class="input" type="text" placeholder="Email"/>
-                        <input class="input" type="password" placeholder="Password"/>
-                    </div>
-                    <div class="slider-right-bottom">
-                        Get Started
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="bottom-header">
@@ -88,25 +94,15 @@
 </section>
 
 <section class="tab">
-    <div class="container">
+    <div class="container"
+
         <div class="clearfix">
-            <div class="col-sm-2 number-tab">
-                <div class="sub-number-tab sub1">
-                    <div class="tab-number">
-                        TAB1
-                    </div>
-                </div>
-                <div class="sub-number-tab sub2">
-                    <div class="tab-number">
-                        TAB2
-                    </div>
-                </div>
-                <div class="sub-number-tab sub3">
-                    <div class="tab-number">
-                        TAB3
-                    </div>
-                </div>
-            </div>
+            <ul class="col-sm-2 number-tab nav nav-pills">
+                <li ><a href="#">Tab 1</a></li>
+                <li><a href="#">Tab 2</a></li>
+                <li><a href="#">Tab 3</a></li>
+
+            </ul>
             <div class="col-sm-6 sub-tab-content ">
                 <h3>
                     Tabs with soft transitioning effect.
@@ -121,7 +117,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                     bibendum laoreet.
                 </p>
-                <button>Download</button>
+                <button class="btn">Download</button>
             </div>
             <img class="col-sm-4 tab-building-img" src="img/tab-building-img.png"/>
         </div>
@@ -178,9 +174,9 @@
     <div class="container">
         <div class="clearfix">
             <div class="col-sm-6 standard-picture-content">
-                <h2>
+                <h3>
                     Standard Picture Section
-                </h2>
+                </h3>
                 <div class="border">
                 </div>
                 <p class="paragraph-top">
@@ -397,10 +393,11 @@
         <p>
             Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
         </p>
-        <button>Download</button>
+        <button class="btn">Download</button>
     </div>
 </section>
 <section class="contact">
+
     <div class="container">
         <div class="contact-title">
             <h2>
@@ -423,7 +420,7 @@
                 <textarea placeholder="Message"></textarea>
             </div>
         </div>
-        <button>Send message</button>
+        <button class="btn">Send message</button>
 
     </div>
 </section>
@@ -442,6 +439,8 @@
 <script type="text/javascript" src="js/vendor/slick.min.js"></script>
 <script src="js/vendor/bootstrap.js"></script>
 <script src="js/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
 </body>
