--- a/axit/index.html
+++ b/axit/index.html
@@ -94,7 +94,7 @@
 </section>
 
 <section class="tab">
-    <div class="container"
+    <div class="container">
 
         <div class="clearfix">
             <ul class="col-sm-2 number-tab nav nav-pills">
