--- a/axit/index.html
+++ b/axit/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 </head>
 <body>
@@ -41,10 +42,10 @@
                     <div class="slider-left col-sm-6">
                         <div class="wrap-slider-left">
                             <img src="img/logo-slider.png"/>
-                            <h2>
+                            <h1>
                                 MODERN AXURE TEMPLATE
                                 FOR BEAUTIFUL PROTOTYPES
-                            </h2>
+                            </h1>
                             <div class="border">
                             </div>
                             <p>
@@ -97,26 +98,43 @@
     <div class="container">
 
         <div class="clearfix">
-            <ul class="col-sm-2 number-tab nav nav-pills">
-                <li ><a href="#">Tab 1</a></li>
-                <li><a href="#">Tab 2</a></li>
-                <li><a href="#">Tab 3</a></li>
-
+            <ul class="nav nav-tabs col-sm-2 tab-pills">
+                <li ><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
+                <li><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
+                <li><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
             </ul>
-            <div class="col-sm-6 sub-tab-content ">
-                <h3>
-                    Tabs with soft transitioning effect.
-                </h3>
-                <p class="paragraph1">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-                    penatibus et magnis dis parturient montes.
-                </p>
-                <p class="paragraph2">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-                    bibendum laoreet.
-                </p>
+            <div class="col-sm-6 sub-tab-content tab-content">
+                <div class="tab-pane active" id="tab_a">
+                    <h3>
+                        Tabs with soft transitioning effect.
+                    </h3>
+                    <p class="paragraph1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <p class="paragraph2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.
+                    </p>
+                </div>
+                <div class="tab-pane" id="tab_b">
+                    <h3>
+                        Tabs with soft transitioning effect.
+                    </h3>
+                    <p class="paragraph1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                </div>
+                <div class="tab-pane" id="tab_c">
+                    <h3>
+                        Tabs with soft transitioning effect.
+                    </h3>
+                </div>
                 <button class="btn">Download</button>
             </div>
             <img class="col-sm-4 tab-building-img" src="img/tab-building-img.png"/>
@@ -198,9 +216,9 @@
 <section class="awesome">
     <div class="container">
         <div class="awesome-title">
-            <h2>
+            <h1>
                 WHY THIS IS AWESOME
-            </h2>
+            </h1>
             <div class="border">
 
             </div>
@@ -259,8 +277,8 @@
             </p>
         </div>
         <div class="clearfix">
-            <div class="col-sm-4 col-xs-4 col-lg-4 basic col">
-                <div class="basic-wrap">
+            <div class="basic col">
+                <div class="basic-wrap wrap-pricing">
                     <div class="top-basic">
                         Basic
                     </div>
@@ -300,8 +318,8 @@
 
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-4 col-lg-4 professional col">
-                <div class="professional-wrap">
+            <div class="professional col">
+                <div class="professional-wrap wrap-pricing">
                     <div class="top-professional">
                         Professional
                     </div>
@@ -339,8 +357,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-4 col-lg-4 enterprise col">
-                <div class="enterprise-wrap">
+            <div class="enterprise col">
+                <div class="enterprise-wrap wrap-pricing">
                     <div class="top-enterprise">
                         Enterprise
                     </div>
@@ -385,9 +403,9 @@
 </section>
 <section class="stylish-axure">
     <div class="stylish-axure-content">
-        <h2>
+        <h1>
             STYLISH AXURE DESIGN
-        </h2>
+        </h1>
         <div class="border">
         </div>
         <p>
@@ -400,9 +418,9 @@
 
     <div class="container">
         <div class="contact-title">
-            <h2>
+            <h1>
                 CONTACT US
-            </h2>
+            </h1>
             <div class="border">
 
             </div>
