--- a/axit/index.html
+++ b/axit/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 </head>
@@ -42,13 +43,13 @@
                     <div class="slider-left col-sm-6">
                         <div class="wrap-slider-left">
                             <img src="img/logo-slider.png"/>
-                            <h1>
+                            <h1 class="raleway">
                                 MODERN AXURE TEMPLATE
                                 FOR BEAUTIFUL PROTOTYPES
                             </h1>
                             <div class="border">
                             </div>
-                            <p>
+                            <p class="raleway-light">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                                 euismod bibendum laoreet. Proin gravida dolor sit amet lacus
                                 accumsan et viverra justo commodo.
@@ -99,12 +100,12 @@
 
         <div class="clearfix">
             <ul class="nav nav-tabs col-sm-2 tab-pills">
-                <li ><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
-                <li><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
-                <li><a href="#tab_c" data-toggle="tab">Tab 3</a></li>
+                <li href="#tab_a"><a href="#tab_a" data-toggle="tab">Tab 1</a></li>
+                <li href="#tab_b"><a href="#tab_b" data-toggle="tab">Tab 2</a></li>
+                <li href="#tab_c"><a  href="#tab_c" data-toggle="tab">Tab 3</a></li>
             </ul>
             <div class="col-sm-6 sub-tab-content tab-content">
-                <div class="tab-pane active" id="tab_a">
+                <div class="tab-pane active fade in" id="tab_a">
                     <h3>
                         Tabs with soft transitioning effect.
                     </h3>
@@ -119,7 +120,7 @@
                         bibendum laoreet.
                     </p>
                 </div>
-                <div class="tab-pane" id="tab_b">
+                <div class="tab-pane fade" id="tab_b">
                     <h3>
                         Tabs with soft transitioning effect.
                     </h3>
@@ -130,7 +131,7 @@
                         penatibus et magnis dis parturient montes.
                     </p>
                 </div>
-                <div class="tab-pane" id="tab_c">
+                <div class="tab-pane fade" id="tab_c">
                     <h3>
                         Tabs with soft transitioning effect.
                     </h3>
@@ -160,9 +161,9 @@
                 <div class="sub-list-title">
                     <img class="sub-list-icon" src="img/sub-list-icon.png">
                     <div class="wrap-title">
-                        <h4>
+                        <b>
                             Title
-                        </h4>
+                        </b>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Aenean euismod bibendum laoreet.
@@ -174,9 +175,9 @@
                         <img src="img/sub-list-icon.png">
                     </div>
                     <div class="wrap-title">
-                        <h4>
+                        <b>
                             Title
-                        </h4>
+                        </b>
                         <p class="paragraph-edit">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Aenean euismod bibendum laoreet.
