--- a/axit/index.html
+++ b/axit/index.html
@@ -28,7 +28,16 @@
     <div class="top-header">
         <div class="container">
             <img src="img/axit-logo.png"/>
-            <ul class="nav navbar-nav menu">
+
+
+
+            <div id="nav-icon1" class="navbar-toggle" data-toggle="collapse"
+                 data-target="#myNavbar">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav navbar-nav menu" id="myNavbar">
                 <li><a class="active" href="#">Futures</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Pricing</a></li>
@@ -283,7 +292,7 @@
                     <div class="top-basic">
                         Basic
                     </div>
-                    <img src="img/pricing-option-0.png"/>
+                    <img class="img-pricing" src="img/pricing-option-0.png"/>
                     <div class="bottom-basic">
                         <strong>Free for life</strong>
                     </div>
@@ -324,7 +333,7 @@
                     <div class="top-professional">
                         Professional
                     </div>
-                    <img src="img/pricing-option-19.png"/>
+                    <img class="img-pricing" src="img/pricing-option-19.png"/>
                     <div class="bottom-professional">
                         Monthly Payment
                     </div>
@@ -363,7 +372,7 @@
                     <div class="top-enterprise">
                         Enterprise
                     </div>
-                    <img src="img/pricing-option-70.png">
+                    <img class="img-pricing" src="img/pricing-option-70.png">
                     <div class="balance-hover">
                     </div>
                     <div class="row1 basic-row">
